--- a/webapp/src/main/resources/application.properties
+++ b/webapp/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=8082
+twilio.account_sid= ACe675fa7681c058bf494b17291f4c66b0
+twilio.auth_token= dbd23f65ca59e319d7e1b489466938c0
+twilio.trial_number= +15619836735
+
